--- a/ecclesia/lectio/mateo/mateo9.html
+++ b/ecclesia/lectio/mateo/mateo9.html
@@ -1448,9 +1448,21 @@
         <details class="select">
           <summary>Metanoia</summary>
           <ol>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>El poder de Jesús sobre la enfermedad y la muerte.</li>
+            <li>La fe como condición indispensable para el milagro. ¿ Existen milagros sin fe ?</li>
+            <li>Tanto el jefe como la mujer hemorroísa se acercan movidos por una fe profunda.</li>
+            <li>La fe permite experimentar el poder transformador de Cristo y anticipa la salvación plena.</li>
+            <li>La compasión de Jesús ante el sufrimiento humano.</li>
+            <li>La progresión de la revelación: los profetas del Antiguo Testamento resucitan por poder delegado, pero Jesús lo hace por su propia autoridad divina.</li>
+            <li>La comparación entre Mateo, Marcos y Lucas permite apreciar cómo cada evangelista ilumina distintos aspectos del mismo misterio. <br>
+Mateo enfatiza la fe simple y directa, Marcos la fuerza vital de Cristo, y Lucas la misericordia que restaura la vida y la dignidad del ser humano.
+</li>
+            <li>El toque del manto o la imposición de las manos simbolizan la mediación sacramental de la gracia. <br>En la Iglesia, esta realidad se prolonga en los sacramentos, donde el creyente “toca” a Cristo por la fe.</li>
+            <li>Así, en los sacramentos, Cristo sigue ‘tocándonos’ para sanarnos.”</li>
+            <li>En esto se revela la diferencia entre la Ley antigua y la gracia: la Ley temía la impureza, la gracia la vence.</li>
+            <li>Su compasión hacia los que sufren llega hasta identificarse con ellos: ‘Estuve enfermo y me visitasteis’ (Mt 25,36).</li>
+            <li>“En cada sufrimiento humano entra la fuerza redentora de Cristo. <br>
+Su contacto con los enfermos —como la mujer que toca su manto— manifiesta que el sufrimiento unido a Él se convierte en fuente de vida.</li>
             <li></li>
           </ol>
         </details>
@@ -1494,30 +1506,220 @@
       <li>
         <details class="select">
           <summary>Variaciones en el Texto</summary>
+          <P><strong>Variaciones textuales de Mateo 9,27-31</strong><br><br>
+
+El pasaje narra la curación de dos ciegos que siguen a Jesús clamando: “¡Ten compasión de nosotros, Hijo de David!”.<br>
+Aunque el contenido esencial es coincidente entre las traducciones reconocidas, existen ligeras variaciones que matizan la comprensión teológica y literaria del texto.<br><br>
+
+<b>1. Biblia de Jerusalén:</b><br>
+Presenta el texto con gran fidelidad al griego, manteniendo el título mesiánico “Hijo de David” y la estructura narrativa simple y sobria.<br>
+El énfasis recae en la fe de los ciegos y la autoridad de Jesús, quien actúa con discreción al imponer silencio tras la curación.<br><br>
+
+<b>2. Vulgata (Jerónimo):</b><br>
+Dice: “Miserere nostri, fili David” —literalmente “ten misericordia de nosotros, hijo de David”.<br>
+Esta versión latina refuerza el tono litúrgico y penitencial de la súplica, con resonancias del “Kyrie eleison”.<br>
+Además, traduce “secundum fidem vestram fiat vobis” (“hágase según vuestra fe”), subrayando la relación directa entre la fe y el milagro.<br><br>
+
+<b>3. Nueva Versión Internacional (NVI):</b><br>
+Usa un lenguaje más contemporáneo: “¡Ten compasión de nosotros, Hijo de David!”.<br>
+Conserva el título mesiánico, aunque omite el matiz de súplica litúrgica característico de la Vulgata.<br>
+Resalta la acción de Jesús como respuesta a la confianza personal de los ciegos, con un estilo narrativo fluido y moderno.<br><br>
+
+<b>4. Biblia de las Américas (LBLA):</b><br>
+Mantiene una traducción literal y precisa: “Conforme a vuestra fe, os sea hecho”.<br>
+El tono es sobrio y fiel al texto griego, acentuando la dimensión de fe personal sin añadir interpretaciones teológicas explícitas.<br><br>
+
+<b>5. Interlineal Griego-Español:</b><br>
+Permite observar la estructura original: “κατὰ τὴν πίστιν ὑμῶν γενηθήτω ὑμῖν” (“según la fe de ustedes sea hecho”).<br>
+Aquí, la palabra <i>πίστις</i> (pistis) —fe— aparece en sentido activo: confianza, adhesión interior a Jesús.<br>
+La forma verbal <i>γενηθήτω</i> (géneithō) expresa una acción divina que acontece por la palabra eficaz del Mesías.<br><br>
+
+<b>Conclusión:</b><br>
+Las variaciones son mínimas pero teológicamente ricas: todas destacan la fe como condición del milagro y la identidad mesiánica de Jesús como “Hijo de David”.<br>
+El mandato final de silencio (“que nadie lo sepa”) muestra la tensión entre la revelación progresiva del Mesías y la tendencia humana a divulgar lo maravilloso.<br>
+</P>
         </details>
       </li>
       <!-- ++++++++++++++++++++++++++++++ -->
       <li>
         <details class="select">
           <summary>Paralelos</summary>
+          <p>
+            <strong>Textos o temas paralelos de Mateo 9,27-31</strong><br><br>
+
+Esta perícopa, que narra la curación de los dos ciegos por Jesús, tiene varios paralelos y resonancias dentro de los Evangelios y en el conjunto de la Escritura.<br>
+Los relatos paralelos iluminan el sentido profundo del milagro y la relación entre la fe, la visión espiritual y el reconocimiento del Mesías.<br><br>
+
+<b>1. Marcos 10,46-52 (Bartimeo, el ciego de Jericó):</b><br>
+Este relato presenta a un solo ciego, Bartimeo, quien también clama “¡Jesús, Hijo de David, ten compasión de mí!”.<br>
+El paralelismo es evidente en la invocación mesiánica, la insistencia del ciego y la respuesta de Jesús: “Tu fe te ha salvado”.<br>
+En Marcos, la curación se da en un contexto de discipulado: el ciego sigue a Jesús “por el camino”.<br><br>
+
+<b>2. Mateo 20,29-34:</b><br>
+El mismo evangelista narra más adelante otra curación de dos ciegos cerca de Jericó, muy semejante a esta.<br>
+Los exegetas discuten si se trata de una duplicación literaria o de dos episodios distintos.<br>
+Ambos relatos refuerzan la idea de que la fe auténtica abre los ojos del corazón para reconocer al Mesías.<br><br>
+
+<b>3. Isaías 35,5:</b><br>
+“El Señor abrirá los ojos de los ciegos y los oídos de los sordos se destaparán”.<br>
+Esta profecía mesiánica se cumple en los milagros de Jesús, manifestando que con Él ha llegado el tiempo de la salvación.<br><br>
+
+<b>4. Isaías 42,6-7:</b><br>
+“Yo, el Señor, te he llamado para abrir los ojos de los ciegos, sacar del calabozo a los presos”.<br>
+Jesús realiza exactamente esta misión: liberar al hombre de la oscuridad del pecado y de la ignorancia espiritual.<br><br>
+
+<b>5. Juan 9,1-7:</b><br>
+El relato de la curación del ciego de nacimiento ofrece una teología más desarrollada sobre la fe y la luz.<br>
+Mientras Mateo destaca la fe previa al milagro, Juan subraya la fe como resultado de la experiencia del encuentro con Cristo.<br><br>
+
+<b>6. Salmo 146,8:</b><br>
+“El Señor da vista a los ciegos”.<br>
+Esta afirmación del salmista se hace realidad en la persona de Jesús, quien actúa con el poder mismo de Dios.<br><br>
+
+<b>Conclusión:</b><br>
+La curación de los ciegos en Mateo 9,27-31 se inserta en la línea profética y mesiánica de las Escrituras.<br>
+Los textos paralelos revelan que la fe es la clave para pasar de la ceguera física y espiritual a la luz del Reino de Dios.<br>
+Jesús es presentado como el cumplimiento vivo de las promesas de Isaías y los Salmos: el Mesías que abre los ojos de los ciegos y concede la verdadera visión del corazón.<br>
+
+          </p>
         </details>
       </li>
       <!-- ++++++++++++++++++++++++++++++ -->
       <li>
         <details class="select">
           <summary>Temas</summary>
+          <strong>Temas teológicos de Mateo 9,27-31</strong><br><br>
+
+<ol>
+  <li><b>La fe como condición del milagro:</b><br>
+  Jesús no obra de manera automática ni mágica, sino en respuesta a la fe viva de quienes lo buscan.<br>
+  La frase “Hágase según vuestra fe” subraya que la fe abre el corazón al poder sanador de Dios.<br>
+  No se trata de una creencia teórica, sino de una confianza activa y perseverante en la persona de Cristo.<br></li><br>
+
+  <li><b>Jesús, el Hijo de David:</b><br>
+  El título mesiánico que los ciegos emplean (“Hijo de David”) reconoce a Jesús como el Mesías esperado que trae la salvación prometida a Israel.<br>
+  En este reconocimiento se anticipa la confesión cristológica de la Iglesia primitiva.<br>
+  Jesús es el cumplimiento de las promesas hechas a David y el portador de la misericordia divina.<br></li><br>
+
+  <li><b>La visión como símbolo de la fe iluminada:</b><br>
+  En la Escritura, la ceguera representa la falta de fe o la incapacidad espiritual para reconocer la verdad.<br>
+  La curación de los ciegos expresa la iluminación interior del creyente que, al encontrar a Cristo, comienza a “ver” con los ojos del alma.<br></li><br>
+
+  <li><b>El poder creador de la palabra de Jesús:</b><br>
+  Cuando dice “según vuestra fe, se os haga”, su palabra realiza lo que pronuncia.<br>
+  En el Evangelio de Mateo, la palabra de Jesús es eficaz, expresión del poder divino que actúa en la historia humana.<br></li><br>
+
+  <li><b>El misterio del silencio mesiánico:</b><br>
+  Jesús ordena a los ciegos no divulgar el milagro, lo que refleja su pedagogía del Reino.<br>
+  No desea ser reducido a un simple hacedor de prodigios, sino ser reconocido en la fe como el Salvador.<br>
+  Este “secreto mesiánico” prepara el camino para una revelación más profunda en la cruz y resurrección.<br></li><br>
+
+  <li><b>La universalidad de la salvación:</b><br>
+  Aunque los protagonistas son judíos, el gesto de Jesús anticipa la apertura del Reino a todos los que creen, sin distinción.<br>
+  La luz de Cristo está destinada a todo ser humano que clama desde su oscuridad interior.<br></li><br>
+
+  <li><b>El dinamismo misionero de la fe:</b><br>
+  A pesar del mandato de silencio, los curados no pueden callar la experiencia del encuentro con Jesús.<br>
+  Esto refleja la fuerza transformadora de la gracia: quien ha sido sanado por Cristo se convierte espontáneamente en testigo del Evangelio.<br></li><br>
+</ol>
+
         </details>
       </li>
       <!-- ++++++++++++++++++++++++++++++ -->
       <li>
         <details class="select">
           <summary>Patrística</summary>
+          <strong>Los Padres de la Iglesia sobre Mateo 9,27-31</strong><br><br>
+
+<ol>
+  <li><b>San Jerónimo (Comentario al Evangelio de Mateo, 9,27):</b><br>
+  “Estos dos ciegos representan al pueblo judío que, dividido en cuerpo y espíritu, grita por la misericordia del Hijo de David.<br>
+  Solo cuando entran en la casa —es decir, en la Iglesia— son iluminados por Cristo.”<br>
+  <i>(Comentario al Evangelio de Mateo, PL 26, col. 72)</i><br><br>
+  Jerónimo interpreta alegóricamente la curación como el paso del judaísmo a la fe cristiana, donde la luz de Cristo se recibe plenamente dentro de la comunidad eclesial.<br></li><br>
+
+  <li><b>San Juan Crisóstomo (Homilía XXXII sobre Mateo):</b><br>
+  “Observa la fe de los ciegos: no se desaniman por ser ignorados, ni se escandalizan porque Jesús parece no responderles al instante.<br>
+  Perseveran gritando y siguiéndolo hasta que Él los llama y les concede la vista.”<br>
+  <i>(Homiliae in Matthaeum, PG 57, col. 389)</i><br><br>
+  Crisóstomo destaca la perseverancia y humildad de la fe que no se apaga ante el silencio de Dios, sino que insiste confiando en su misericordia.<br></li><br>
+
+  <li><b>San Beda el Venerable:</b><br>
+  “El que abre los ojos de los ciegos corporales abre también los de los corazones incrédulos.<br>
+  Los dos ciegos son figura de los pueblos de Israel y de los gentiles, que recibirán la luz de Cristo cuando reconozcan su divinidad.”<br>
+  <i>(In Evangelium Matthaei Expositio, PL 92, col. 61)</i><br><br>
+  Beda ofrece una interpretación tipológica: la acción de Jesús anticipa la universalidad del Evangelio y la iluminación de todos los pueblos.<br></li><br>
+
+  <li><b>San Hilario de Poitiers:</b><br>
+  “La fe de los ciegos precede al milagro; no piden ver para creer, sino que creen para ver.<br>
+  En esto se manifiesta el orden divino de la salvación.”<br>
+  <i>(Commentarius in Matthaeum, 9,27-31; PL 9, col. 1007)</i><br><br>
+  Hilario subraya el principio cristiano de que la fe es causa del conocimiento espiritual, no su resultado.<br></li><br>
+
+  <li><b>San Agustín de Hipona:</b><br>
+  “Los ciegos que recobran la vista son símbolo de las almas que, iluminadas por Cristo, comienzan a ver lo que antes ignoraban.<br>
+  Mas si después de recibir la luz no guardan silencio cuando Él lo manda, muestran aún su debilidad humana.”<br>
+  <i>(Sermón 88, 1-2; PL 38, col. 546)</i><br><br>
+  Agustín ve en el mandato de silencio una lección sobre la obediencia espiritual: el discípulo debe discernir cuándo hablar y cuándo callar.<br></li><br>
+
+  <li><b>Orígenes:</b><br>
+  “Los dos ciegos son las almas que, aunque privadas de la visión espiritual, siguen a Jesús guiadas por la voz de la fe.<br>
+  Cuando confiesan que Él es el Hijo de David, confiesan también que en Él se cumple toda la esperanza mesiánica.”<br>
+  <i>(Comentario a Mateo, 13,9)</i><br><br>
+  Orígenes interpreta el milagro en clave espiritual y mística: la luz de Cristo se recibe por la confesión de fe y la adhesión interior al Verbo.<br></li><br>
+</ol>
+
+<b>Conclusión:</b><br>
+Los Padres de la Iglesia coinciden en ver en esta perícopa un signo de la iluminación interior que Cristo otorga a quienes creen.<br>
+Los ciegos representan la humanidad necesitada de la luz de la fe, y su curación, la obra redentora de Cristo que abre los ojos del alma para reconocerlo como el verdadero Hijo de Dios.<br>
+
         </details>
       </li>
       <!-- ++++++++++++++++++++++++++++++ -->
       <li>
         <details class="select">
           <summary>Magisterio</summary>
+          <strong>El Magisterio de la Iglesia sobre Mateo 9,27-31</strong><br><br>
+
+<ol>
+  <li><b>La fe como respuesta libre y confiada al llamado de Cristo:</b><br>
+  El Catecismo enseña que “la fe es una adhesión personal del hombre entero a Dios que se revela” (CEC 176).<br>
+  En esta perícopa, Jesús cura según la fe de los ciegos: “Hágase según vuestra fe”.<br>
+  El Magisterio recuerda que la fe es a la vez un don de Dios y una respuesta humana: “Para que el hombre pueda dar esta respuesta de fe, es necesaria la gracia de Dios que lo previene y ayuda” (CEC 153).<br>
+  Así, el milagro ilustra la cooperación entre la gracia divina y la libertad del creyente.<br><br></li>
+
+  <li><b>Cristo, Luz del mundo:</b><br>
+  El Concilio Vaticano II afirma: “Cristo es la luz verdadera que, al venir a este mundo, ilumina a todo hombre” (<i>Lumen Gentium</i> 1).<br>
+  La curación de los ciegos simboliza esta luz que disipa la oscuridad del pecado y de la ignorancia espiritual.<br>
+  San Juan Pablo II, en su encíclica <i>Redemptor Hominis</i> (n. 9), enseña que “el hombre que se encuentra con Cristo descubre en Él la plena luz de su vocación”.<br>
+  En este sentido, la curación de los ciegos manifiesta la misión iluminadora y salvífica del Verbo Encarnado.<br><br></li>
+
+  <li><b>Jesús, cumplimiento de las promesas mesiánicas:</b><br>
+  El Magisterio reconoce en los milagros de Cristo la realización de las profecías mesiánicas de Isaías: “los ciegos verán” (cf. <i>Dei Verbum</i> 4).<br>
+  Jesús no solo realiza obras de poder, sino que revela con ellas su identidad divina y su misión redentora.<br>
+  El Catecismo enseña: “Los signos que realiza Jesús testimonian que el Reino ya está presente en Él, y acreditan que Él es el Mesías anunciado” (CEC 547).<br><br></li>
+
+  <li><b>El silencio mesiánico y la pedagogía de la fe:</b><br>
+  Jesús pide a los ciegos que no divulguen el milagro (Mt 9,30).<br>
+  Este “silencio” es interpretado por la Iglesia como un acto pedagógico: Cristo desea que su mesianismo sea comprendido no por la admiración ante los prodigios, sino por la fe en su persona.<br>
+  El Catecismo comenta: “Los milagros de Jesús invitan a creer en Él, pero no obligan. A pesar de sus milagros, algunos lo rechazan” (CEC 548).<br>
+  Por eso, la fe auténtica debe nacer del corazón iluminado por el Espíritu, no solo del asombro externo.<br><br></li>
+
+  <li><b>La universalidad de la salvación:</b><br>
+  En los dos ciegos curados, la tradición cristiana ha visto una figura de toda la humanidad ciega por el pecado.<br>
+  El Magisterio enseña que “el plan de salvación abarca a todos los hombres” (<i>Gaudium et Spes</i> 22).<br>
+  Así, la acción de Cristo que devuelve la vista no es solo un hecho histórico, sino signo del designio universal del amor de Dios que llama a todos a la luz de la verdad.<br><br></li>
+
+  <li><b>El testimonio misionero del creyente:</b><br>
+  Aunque Jesús manda callar el milagro, los ciegos curados lo proclaman por todas partes (Mt 9,31).<br>
+  Esto refleja lo que el Magisterio enseña sobre la naturaleza misionera de la fe: “La fe se fortalece dándola” (<i>Redemptoris Missio</i> 2).<br>
+  El que ha experimentado la luz de Cristo no puede retenerla solo para sí, sino que se convierte en testigo del Evangelio ante el mundo.<br><br></li>
+</ol>
+
+<b>Conclusión:</b><br>
+El Magisterio de la Iglesia ve en esta perícopa una síntesis de la economía de la fe: el encuentro personal con Cristo que ilumina al hombre y lo envía a testimoniar su amor.<br>
+Jesús, luz del mundo, devuelve la vista a quienes creen, anticipando así la salvación que se manifestará plenamente en su muerte y resurrección.<br>
+
         </details>
       </li>
       <!-- ++++++++++++++++++++++++++++++ -->
