--- a/ecclesia/oracion/CastilloInterior.html
+++ b/ecclesia/oracion/CastilloInterior.html
@@ -1346,21 +1346,20 @@
         <ol>
           <h2><i>GRATIA INCREMENTI</i></h2>
           <h3>Prooemium</h3>
-          <p><b> Valor: Principio moral <br> Es el ideal o bien que se reconoce como digno.</b> <br>
+          <p><b> Valor o Virtud: Principio moral <br> Es el ideal o bien que se reconoce como digno.</b> <br>
             - Es una creencia profunda sobre lo que es correcto, importante o deseable. <br>
             - Los valores guían nuestras decisiones y nos dan propósito.</p>
-            <p> <b>Actitud: Manifestación concreta <br>Es la capacidad estable de actuar conforme al valor. </b> <br>
-              - Es la disposición interna que mostramos ante personas, situaciones o ideas.</p>
-            - Las actitudes permanecen si se convierten en acciones <br>
-            - Las acciones son verdaderas si brotan de las actitudes y valores. <br>
-            - La actitud, como reflejo del Valor, es lo que define a la acción. <br>
-            - Hacer de la Perseverancia un hábito  <br><br>
-            <b>Hábito: Actitud repetida <br>Es la capacidad estable de actuar conforme al valor de manera natural. </b><br>
-            habitus viene del latín habere (“tener”, “poseer”). <br>
-            - “Disposición estable que inclina a obrar de un modo determinado, fácilmente, con gusto y constancia.”
-            <p>
-
-
+          <p> <b>Actitud: Manifestación concreta <br>Es la capacidad estable de actuar conforme al valor. </b> <br>
+            - Es la disposición interna que mostramos ante personas, situaciones o ideas.</p>
+          - Las actitudes permanecen si se convierten en acciones <br>
+          - Las acciones son verdaderas si brotan de las actitudes y valores. <br>
+          - La actitud, como reflejo del Valor o Virtud, es lo que define a la acción. <br>
+          - Hacer de la Perseverancia un hábito <br><br>
+          <b>Hábito: Actitud repetida <br>Es la capacidad estable de actuar conforme al valor de manera natural.
+          </b><br>
+          habitus viene del latín habere (“tener”, “poseer”). <br>
+          - “Disposición estable que inclina a obrar de un modo determinado, fácilmente, con gusto y constancia.”
+          <p>
           </p>
           <!-- ------------------------------------ -->
           <h3>La Perseverancia</h3>
@@ -1368,9 +1367,11 @@
           <p>La Gracia de la Perseverancia, Necesita de la fe, esperanza y caridad</p>
           <!-- ------------------------------------ -->
           <h5><i>La Paciencia</i></h5>
-          <li> Es la virtud Que trata de conocer los tiempos y procesos. Y esperar activamente en consecuencia. <br> [Etimológicamente, patientia viene del latín patior (“sufrir”, “soportar”)]  </li>
+          <li> Es la virtud Que trata de conocer los tiempos y procesos. Y esperar activamente en consecuencia. <br>
+            [Etimológicamente, patientia viene del latín patior (“sufrir”, “soportar”)] </li>
           <h5>Criterios de que es Cristiana</h5>
-          <li>Se ordena al bien <br>No es resignación ni indiferencia, sino una elección libre de soportar el mal por un bien mayor (la fidelidad, la justicia, la caridad). Heb 12,2</li>
+          <li>Se ordena al bien <br>No es resignación ni indiferencia, sino una elección libre de soportar el mal por un
+            bien mayor (la fidelidad, la justicia, la caridad). Heb 12,2</li>
           <li>Está unida a la esperanza <br>El paciente no desespera, confía en la acción de Dios en el tiempo.</li>
           <li>Brota del amor <br>Soporta no por orgullo o miedo, sino por amor: al prójimo, a la verdad o a Dios.</li>
           <!-- ------------------------------------------ -->
@@ -1381,64 +1382,204 @@
             - La justicia puede volverse rigidez <br>
             - La fortaleza puede volverse temeridad <br>
             - La caridad puede volverse ingenuidad o permisividad</li>
-            - Elige lo que más conduce al amor de Dios
-              <li>La prudencia es la virtud que convierte el deseo de hacer el bien en una acción realmente buena.</li>
-              <!-- ------------------------------------ -->
+          - Elige lo que más conduce al amor de Dios
+          <li>La prudencia es la virtud que convierte el deseo de hacer el bien en una acción realmente buena.</li>
+          <!-- ------------------------------------ -->
           <h5>El Método</h5>
-          <p>Método: un conjunto de pasos, reglas o procedimientos sistemáticos y organizados que se siguen para lograr un fin</p>
-          <li>Es una guía estructurada que indica qué hacer, en qué orden y con qué criterios, para obtener resultados</li>
+          <p>Método: un conjunto de pasos, reglas o procedimientos sistemáticos y organizados que se siguen para lograr
+            un fin</p>
+          <li>Es una guía estructurada que indica qué hacer, en qué orden y con qué criterios, para obtener resultados
+          </li>
           <li>Tener muy claro el Fin</li>
-             <li>Un objetivo específico, resolver un problema o investigar una cuestión.</li>
-            reproducibles.</li>
-            <h5>Processus</h5>
-          <li> Propósito definido: objetivo claro que se persigue </li>
-          <li>   Secuencia de pasos: orden lógico y planificado de acciones.</li>
-          <li>Principios y reglas: fundamentos que orientan las decisiones durante el proceso</li>
-          <li> Reproducibilidad: capacidad de ser aplicado por otros para obtener resultados similares.</li>
-        <!-- +++++++++++++++++++++++++++ -->
-          <h5>El Orden</h5>
-          <li>Se caracteriza por discernir las prioridades para la acción del método <br>
-            Secuencia de orden:
+          <li>Un objetivo específico, resolver un problema o investigar una cuestión.</li>
+          reproducibles.
+    </li>
+    <h5>Processus</h5>
+    <li> Propósito definido: objetivo claro que se persigue </li>
+    <li> Secuencia de pasos: orden lógico y planificado de acciones.</li>
+    <li>Principios y reglas: fundamentos que orientan las decisiones durante el proceso</li>
+    <li> Reproducibilidad: capacidad de ser aplicado por otros para obtener resultados similares.</li>
+    <!-- +++++++++++++++++++++++++++ -->
+    <h5>El Orden</h5>
+    <li>Se caracteriza por discernir las prioridades para la acción del método <br>
+      Secuencia de orden:
+      <ol>
+        <h5>Método Inicial</h5>
+        <li>Tener muy claro el Fin</li>
+        <li>Un objetivo específico</li>
+        <li>Secuencia de pasos</li>
+        <li>Reproducibilidad</li>
+        <h5>Desarrollo del Método</h5>
+        <li>Tomar conciencia del desorden, es relativo a la secuencia de pasos</li>
+        <li>Elegir lo esencial</li>
+        <li>Comienza con lo pequeño.</li>
+        <li>Ayuda a vincular cada acto con un sentido.</li>
+        <li>Vivir el orden con libertad interior [Permanente mejora]</li>
+      </ol>
+    </li>
+    <li>Cuando Dios está en primer lugar, todo encuentra su lugar</li>
+    </ol>
+    <!-- +++++++++++++++++++++++++++++++++++++++++++++++++ -->
+    <ol>
+      <h2><i>GRATIA AMORIS</i></h2>
+      <h3>El Bien</h3>
+      <li> El valor de cualquier acción está en que sea La del Señor </li>
+      <li> El enemigo nos dará cien verdades si con eso nos puede hacer caer en una sola mentira </li>
+      <li>Video cor Meum in Quotidianis Actibus Meis</li>
+      <li> Dios se da todo, es el pecado que me impide verlo </li>
+      <li> Toda tentación es precedida por la Gracia Para vencerla Y para crecer. Porque revela la inclinación del
+        corazón </li>
+      <li> Todo pensamiento que no me lleva al Señor es tentación </li>
+      <li> Buscar y acoger la Gracia en la tentación y hacer de la tentación motivo de Gracia </li>
+      <li>Un error doctrinal siempre lleva al pecado [Desconocimiento de Dios, su Revelación y su Gracia] </li>
+      <li>Tras cada pecado o tentación, hay siempre un error doctrinal</li>
+
+
+
+    </ol>
+    </details>
+    </li>
+    <!-- ++++++++++++++++++++++++++++++ -->
+    <li>
+      <details class="select">
+        <summary>Hic et Nunc</summary>
+        <h3>Aquí y Ahora</h3>
+        <ol>
+          <h3>Gracia</h3>
+          <li>Acción de Dios que invita a la transformación <br>
+            incluye: <br>
             <ol>
-              <h5>Método Inicial</h5>
-              <li>Tener muy claro el Fin</li>
-              <li>Un objetivo específico</li>
-              <li>Secuencia de pasos</li>
-              <li>Reproducibilidad</li>
-            <h5>Desarrollo del Método</h5>
-              <li>Tomar conciencia del desorden, es relativo a la secuencia de pasos</li>
-              <li>Elegir lo esencial</li>
-              <li>Comienza con lo pequeño.</li>
-              <li>Ayuda a vincular cada acto con un sentido.</li>
-              <li>Vivir el orden con libertad interior [Permanente mejora]</li>
+              <li>Revelación</li>
+              <li>Valores o Virtudes <br>
+                Del latín “virtus, virtūtis” que significa “fuerza, potencia, valor, cualidad” y, por extensión,
+                “excelencia moral” <br>
+              </li>
+              <li>Actitudes <br>
+                Es la actualización de la Virtud o valor
+              </li>
+              <li>Acciones <br>
+                Es el Fin, lo que le da sentido a todo el proceso <br>
+
+
+              </li>
             </ol>
           </li>
-          <li>Cuando Dios está en primer lugar, todo encuentra su lugar</li>
-        </ol>
-          <!-- +++++++++++++++++++++++++++++++++++++++++++++++++ -->
-           <ol>
-          <h2><i>GRATIA AMORIS</i></h2>
-          <h3>El Bien</h3>
-          <li> El valor de cualquier acción está en que sea La del Señor </li>
-          <li> El enemigo nos dará cien verdades si con eso nos puede hacer caer en una sola mentira </li>
-          <li>Video cor Meum in Quotidianis Actibus Meis</li>
-          <li> Dios se da todo, es el pecado que me impide verlo </li>
-          <li> Toda tentación es precedida por la Gracia Para vencerla Y para crecer. Porque revela la inclinación del
-            corazón </li>
-          <li> Todo pensamiento que no me lleva al Señor es tentación </li>
-          <li> Buscar y acoger la Gracia en la tentación y hacer de la tentación motivo de Gracia </li>
-          <li>Un error doctrinal siempre lleva al pecado [Desconocimiento de Dios, su Revelación y su Gracia] </li>
-          <li>Tras cada pecado o tentación, hay siempre un error doctrinal</li>
-     
+          <h3>Revelación</h3>
+          <li>La Revelación es la acción libre y amorosa de Dios por la cual Él se da a conocer a los hombres y les
+            comunica su designio de salvación.</li>
+          <li>Encuentro donde El Señor muestra algo de Él </li>
+          <li>“El plan de la revelación se realiza por obras y palabras intrínsecamente unidas, de manera que las obras
+            manifiestan y confirman la doctrina, y las palabras proclaman las obras.”</li>
+          <li>Su fin último es que el hombre entre en comunión con Dios (DV 2).</li>
+          <li>En Su Palabra, y la Tradición [El Magisterio, La Liturgia, y la Vida]</li>
+          <li>“Cristo, el Hijo de Dios hecho hombre, es la Palabra única, perfecta e insuperable del Padre” (CIC §65).
+          </li>
+          <h4>La Tradición</h4>
+          <li>Es la transmisión viva del Evangelio en la Iglesia, por medio de la predicación, la vida litúrgica, las
+            costumbres y los escritos de los Padres.</li>
+          <li>No es simple costumbre, sino la presencia activa del Espíritu Santo que conserva, interpreta y actualiza
+            la fe apostólica.</li>
+          <li>“La Sagrada Tradición y la Sagrada Escritura constituyen un solo depósito sagrado de la Palabra de Dios
+            confiado a la Iglesia” (Dei Verbum 10).</li>
+          <h4>El Magisterio</h4>
+          <li>El Magisterio (Papa y obispos en comunión con él) no está por encima de la Palabra de Dios, sino a su
+            servicio, interpretándola fielmente (DV 10).</li>
+          <li>Catecismo §95: “La Sagrada Tradición, la Sagrada Escritura y el Magisterio están tan unidos que uno no
+            puede subsistir sin los otros.”</li>
+          <li>San Ireneo de Lyon (Adv. Haer. III, 3,1): <br>
 
+            “Lo que los Apóstoles predicaron, después, por voluntad de Dios, lo consignaron por escrito, para que fuera
+            fundamento y columna de nuestra fe.”</li>
+          <li>San Agustín (Contra ep. Manichaei 5,6): <br>“Yo no creería en el Evangelio si no me moviera la autoridad
+            de la Iglesia católica.”</li>
+          <li>Santa Teresa decía: <br>
+            “No pensemos que tenemos la oración si no procuramos conformar la vida con la Palabra de Dios.” (Camino de
+            perfección, 4,4)</li>
 
+          <br>
+          <h3>Valores o Virtudes</h3>
+          <li>Para la Iglesia, los valores cristianos no nacen del consenso humano, sino del Evangelio, es decir, del
+            modo de ser de Cristo. <br>
+            El cristiano es llamado a configurarse con Él.</li>
+          <li>FE <br>
+            Confiar y adherirse plenamente a Dios revelado en Cristo. <br>
+            Implica: Fe Confiar y adherirse plenamente a Dios revelado en Cristo. Escucha, docilidad, búsqueda de la
+            verdad.
+          </li>
+          <li>ESPERANZA <br>
+            Confiar en las promesas de Dios y perseverar en medio de la prueba. <br>
+            Implica: Paciencia, optimismo cristiano, fortaleza interior.
+          <li>CARIDAD <br>
+            Amar a Dios sobre todas las cosas y al prójimo por Él. <br>
+            Implica: Generosidad, servicio, perdón, compasión.
+          </li>
+          <h3>Actitudes</h3>
+
+          <li> Es la actualización de los valores personales en situaciones concretas <br>
+            Una actitud puede depender mucho del contexto y de emociones momentáneas <br>
+            Y es una oportunidad para buscar la coherencia entre valores y actitudes, asi como de valores entre sí
+            mismos <br></li>
+          <h3>Acciones</h3>
+          <li> Son las obras que brotan de las actitudes y valores <br>
+            Y son la manifestación externa de la vida interior </li>
+          <li>Es la ocasión de ser coherente entre las mismas virtudes y de estas con las actitudes</li>
         </ol>
       </details>
     </li>
     <!-- ++++++++++++++++++++++++++++++ -->
     <li>
       <details class="select">
+        <summary>Suggestio</summary>
+        <h4>su-gués-tsi-o === Insinuación suave</h4>
+        <ol>
+          <h3>La Gracia</h3>
+          <li>Acción de Dios que invita a la transformación <br>
+            Mediante: <br>
+            La Revelación, Tradición y Magisterio<br>
+            Las Virtudes,[Fe, Esperanza y Caridad]<br>
+            Las Actitudes de El Evangelio <br>
+            Las Acciones Cristianas</li>
+    </li>
+    <li>Dios se revela, mostrando virtudes que invitado a interiorizarlas, de manera que sean actitudes y hábitos, que
+      se realizan en acciones que revelan a Jesús </li>
+    <h3>GRATIA UNITATIS : la Oración</h3>
+    <h4>El Fin de la Oración es Dios mismo</h4>
+    <li>Oración Vocal <br>
+      En la mañana oraciones de la iglesia, de manera consiente <br>
+      En la Noche un examen de conciencia, dando gracias por el bien <br>
+      Y entender que tras cada pecado hay un error doctrinal [Desconocimiento de Dios, la Revelación y su Gracia] <br>
+      Y Que todo error doctrinal siempre nos llevará al pecado.
+    </li>
+    <li>Oración Mental, (La Lectio Divina) <br>
+      Leer el texto de la semana <br>
+      Oración mental:<br>
+      La Revelación, que muestra Dios de Sí mismo en: <br>
+      Las Virtudes, que invitan a la conversión <br>
+      Las Actitudes, que muestran mi avance en la conversión <br>
+      Las Acciones, evidencian mi conversión<br>
+      Y hábitos que afianzan mi unión con el Señor
+    </li>
+    <h3>GRATIA INCREMENTI</h3>
+    <li>La Perseverancia: Acción que me muestra mis actitudes, virtudes y Unión con El Señor en su revelación</li>
+    <li>La Paciencia: Virtud que me ayuda a conocer los tiempos y procesos de la Revelación</li>
+    <li>La Prudencia: Virtud que me ayuda a aplicar la Revelación a mi vida concreta</li>
+    <li>El Orden: Discernir las prioridades para la acción del método <br>
+      Tener muy claro el Fin<br>
+      Un objetivo específico<br>
+      Secuencia de pasos<br>
+      Reproducibilidad<br><br>
+    </li>
+    <li>El Método: Conjunto de pasos para vivir la Revelación de manera ordenada</li>
+    <h3>GRATIA AMORIS</h3>
+    <li>El Bien: Acción que me une al Señor en su Revelación</li>
+  </ol>
+    </details>
+    </li>
+    <!-- ++++++++++++++++++++++++++++++ -->
+    <li>
+      <details class="select">
         <summary></summary>
+
         <ol>
           <li></li>
         </ol>
