--- a/ecclesia/oracion/01Statio.html
+++ b/ecclesia/oracion/01Statio.html
@@ -37,7 +37,7 @@
           <li class="li"><a href="#2">SCIENTIA DOMINI</a></li>
           <li class="li"><a href="#3">DISCERNIMENTUM</a></li>
           <li class="li"><a href="#4">ORATIO</a></li>
-          <li class="li"><a href="#5"></a></li>
+          <li class="li"><a href="#5">LECTIO</a></li>
           <li class="li"><a href="#6"></a></li>
           <li class="li"><a href="#7"></a></li>
         </ol>
@@ -544,7 +544,19 @@ Y el ser humano participa del bien cuando ama, actúa con justicia, y sigue la v
     elegir al Bien</p></i>
     <p><b>Donde esta mi tesoro esta mi corazón. Mt 6,21</b></p>
             </ol>
-            <p><br /><br /><b><i>Finalidad, Objetivo, meta, propósito</i></b></p>
+                    </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary></summary>
+            <ol>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ol>
+            <p><br /><br /></p>
           </details>
         </li>
         <!-- ****************************** -->
@@ -566,12 +578,48 @@ Y el ser humano participa del bien cuando ama, actúa con justicia, y sigue la v
     </section>
     <!-- ****************************************************************** -->
     <section id="5">
-      <h2 class="subtitulo"></h2>
+      <h2 class="subtitulo">LECTIO</h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <!-- ****************************** -->
         <li>
-          <!-- ++++++++++++++++++++++++++++ -->
+          <details class="select">
+            <summary>Mt 1,1-17</summary>
+            
+            <ol>
+              <h2>Gratia</h2>
+              <li>Fin, la Voluntad de Dios</li>
+              <li>Virtudes, La Verdad y el Bien</li>
+              <li>Objetivo, interacción entre la realidad y las virtudes</li>
+              <li>Meta, transformar la realidad acorde a las virtudes</li>
+            </ol>
+<ol>
+  <h2>Conversio</h2>
+  <li>Orden, tener conciencia de las condiciones, posibilidades etc.</li>
+  <li>Prioridades, interacción entre virtudes y orden</li>
+  <li>Actitudes, ensayos de acciones</li>
+</ol>
+<ol>
+  <h2>Facere</h2>
+  <li>Acciones, interacción con la realidad</li>
+  <li>Hábito, método inicial</li>
+</ol>
+<ol>
+  <h2>Dicere</h2>
+  <li>Método Concreto, mejora la acción concreta y lo hace desde el hábito a una mejor comprensión del Fin</li>
+  <li>Método General, busca elementos aplicables a toda acción</li>
+</ol>
+<ol>
+  <h2 class="cita">Hic et Nunc</h2>
+  <li>Empezar a establecer hábitos diarios</li>
+  <li>Examen de conciencia en relación a la Verdad y Bien</li>
+  <li>Ordenar información, haciéndola interrelacionada</li>
+  <li></li>
+</ol>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
           <details class="select">
             <summary></summary>
             <ol>
