--- a/ecclesia/oracion/CastilloInterior.html
+++ b/ecclesia/oracion/CastilloInterior.html
@@ -1536,9 +1536,14 @@
           <li>Acción de Dios que invita a la transformación <br>
             Mediante: <br>
             La Revelación, Tradición y Magisterio<br>
+            No se trata de leer e interpretar creyendo que eso es Revelación. Sino de contrastar con la tradición y el magisterio <br><br>
             Las Virtudes,[Fe, Esperanza y Caridad]<br>
+            Adoptar las virtudes que nos propone la Lectio Divina. <br><br>
             Las Actitudes de El Evangelio <br>
-            Las Acciones Cristianas</li>
+            Interiorizar las actitudes que nos propone la Lectio Divina. Evaluando en nuestra en nuestro examen de conciencia Si estamos viviendo conforme A aquellas actitudes  <br><br>
+            Las Acciones Cristianas <br>
+          Procurar Siempre actuar conforme nuestros valores Con  la prudencia necesaria En las actitudes y acciones
+          </li>
     </li>
     <li>Dios se revela, mostrando virtudes que invitado a interiorizarlas, de manera que sean actitudes y hábitos, que
       se realizan en acciones que revelan a Jesús </li>
