--- a/ecclesia/lectio/mateo/mateo10.html
+++ b/ecclesia/lectio/mateo/mateo10.html
@@ -37,7 +37,13 @@
       <h1>TEMAS</h1>
       <div>
         <ol>
-          li.li*7>a[href="#$"]
+          <li class="li"><a href="#1"></a></li>
+          <li class="li"><a href="#2"></a></li>
+          <li class="li"><a href="#3"></a></li>
+          <li class="li"><a href="#4"></a></li>
+          <li class="li"><a href="#5"></a></li>
+          <li class="li"><a href="#6"></a></li>
+          <li class="li"><a href="#7"></a></li>
         </ol>
       </div>
     </section>
